# GV-FastAPI

./: Idea.txt  cs.py  hello.py  main.py  ngrok.py  pyproject.toml  test.py
chatbot/: __init__.py  chat.py
methods/: Auth.py  Community.py  Pickup.py  Reward.py  __init__.py
mongo/: Connect.py  __init__.py
schemas/: Booking.py  DailyLogs.py  Login.py  Post.py  Reward.py  Schedule.py  Users.py  __init__.py
timeseries/: data.csv  model.py  test.ipynb
