[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Rithik Raj <rithu0644@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pydantic = "^2.5.2"
pymongo = "^4.6.1"
python-decouple = "^3.8"
pillow = "^10.1.0"
python-multipart = "^0.0.6"
pyngrok = "^7.0.3"
pandas = "^2.1.4"
statsmodels = "^0.14.0"
matplotlib = "^3.8.2"
xgboost = "^2.0.2"
scikit-learn = "^1.3.2"

[tool.pyright]
reportGeneralTypeIssues = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
